@@ -1,7 +1,6 @@
 /***************************************************************************
   Copyright (C) 2005 by Pieter Palmers   *
-  ppalmers@joowmp3.lan   *
-                                                                        *
+                                                                       *
   This program is free software; you can redistribute it and/or modify  *
   it under the terms of the GNU General Public License as published by  *
   the Free Software Foundation; either version 2 of the License, or     *
@@ -34,7 +33,7 @@
 
 #include <signal.h>
 
-#include "freebob_streaming.h"
+#include "libfreebob/freebob_streaming.h"
 
 #include "debugtools.h"
 
